<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff2f2f2f"
    android:orientation="vertical" >

    <include
        android:id="@id/actionbar"
        style="@style/ActionBar"
        layout="@layout/top_item" >
    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dip"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:gravity="center_vertical"
            android:text="@string/setting_soft"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/concor"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_marginLeft="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@id/share_tssv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/setting_soft_share"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dip"
                    android:background="@drawable/setting_click"
                    android:contentDescription="@string/app_name" />
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:background="@drawable/sc_line"
                android:contentDescription="@string/app_name" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_marginLeft="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@id/clear_cache"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/setting_soft_clear_cache"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dip"
                    android:background="@drawable/setting_click"
                    android:contentDescription="@string/app_name" />
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:background="@drawable/sc_line"
                android:contentDescription="@string/app_name" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_marginLeft="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@id/soft_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/setting_soft_feedback"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dip"
                    android:background="@drawable/setting_click"
                    android:contentDescription="@string/app_name" />
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dip"
                android:background="@drawable/sc_line"
                android:contentDescription="@string/app_name" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_marginLeft="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@id/contack_me"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/setting_soft_contact"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dip"
                    android:background="@drawable/setting_click"
                    android:contentDescription="@string/app_name" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dip"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:gravity="center_vertical"
            android:text="@string/setting_other"
            android:textSize="25sp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:background="@drawable/concor"
                android:orientation="horizontal" >

                <TextView
                    android:id="@id/quality_application"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/setting_other_quality_applications"
                    android:layout_marginLeft="5dip"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="20dip"
                    android:layout_height="20dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dip"
                    android:background="@drawable/setting_click"
                    android:contentDescription="@string/app_name" />
            </RelativeLayout>
       </LinearLayout>
</LinearLayout>